webextensions/sidebar/styles/base.css
/* ... */
/* This is required to prevent dragging of images (ex. favicon).
   Otherwise they are unexpectedly dragged just as an image and
   it is downloadable via dropping on the desktop or others. */
img {
  pointer-events: none;
}

button,
.after-tabs [role="button"] /*,
tab-item,
tab-twisty,
tab-closebox,
tab-sound-button */ {
  -moz-user-focus: ignore !important;
}

.vbox {
  align-items: stretch;
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: flex-start;
}


/* tabbar */

:root, body {
  font: message-box; /* this is same to Firefox's UI. */
}

#tabbar-container,
#tabbar,
#background,
#subpanel-container {
  bottom: 0;
  left: 0;
  margin: 0;
  overflow: hidden;
  padding: 0;
  position: fixed;
  right: 0;
  top: 0;
  z-index: var(--accessible-ui-z-index);
}

#tabbar-container {
  bottom: var(--subpanel-area-size);
  top: var(--visual-gap-offset);
}
:root.hover-on-top-edge:hover #tabbar-container {
  transition: var(--visual-gap-hover-animation);
  top: 0 !important;
}

#tabbar {
  margin-top: var(--pinned-tabs-area-size);
  position: absolute;
}

#tabbar.overflow {
  bottom: var(--after-tabs-area-size);
  overflow-y: scroll;
}

.tabs-spacer {
  display: none;
  height: 0;
  pointer-events: none;
  visibility: hidden;
}

:root.animation .tabs-spacer {
  transition: height var(--collapse-animation);
}

#tabbar.overflow .tabs-spacer {
  display: block;
}

:root.initializing #tabbar {
  opacity: 0;
}

:root.animation #tabbar {
  transition: margin-top var(--collapse-animation);
}

#background {
  background-color: -moz-dialog; /* This is required to cover dummy elements. See also: https://github.com/piroor/treestyletab/issues/1703#issuecomment-354646405 */
  pointer-events: none;
  z-index: var(--background-z-index);
}

/* put scrollbar leftside */
:root.left #tabbar {
  direction: rtl;
}
:root.left #all-tabs,
:root.left #tabbar .after-tabs {
  direction: ltr;
}

#tabbar {
  scrollbar-width: thin;
}


ul {
  flex-grow: 1;
  list-style: none;
  margin: 0;
  padding: 0;
}


/* dummy elements to calculate actual size of boxes */

#dummy-tabs {
  bottom: 0;
  clip: rect(0, 0, 0, 0);
  left: 0;
  overflow-y: scroll;
  pointer-events: none;
  position: fixed;
  right: 0;
  z-index: var(--dummy-element-z-index); /* Put it below the background. See also: https://github.com/piroor/treestyletab/issues/1703#issuecomment-354646405 */
}

#dummy-favicon-size-box {
  background: -moz-dialog;
  display: inline-block;
  width: 1em;
  height: 1em;
  max-width: 1em;
  max-height: 1em;
  min-width: 16px;
  min-height: 16px;
}

#dummy-tab-color-box {
  background: -moz-dialog;
}

#dummy-highlight-color-box {
  background: Highlight;
  color: HighlightText;
}


/* tabs */

tab-item {
  align-items: stretch;
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: stretch;
  line-height: 1;
  list-style: none;
  margin: 0;
  max-width: 100%;
  overflow: hidden;
  pointer-events: none;
  position: relative;
}

tab-item-substance {
  align-items: center;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
  left: 0;
  line-height: 1;
  list-style: none;
  margin: var(--tab-margin-top) var(--tab-margin-right) var(--tab-margin-bottom) var(--tab-margin-left);
  /* margin-top: 0; *//* don't set for animation */
  max-width: 100%;
  overflow: hidden;
  opacity: 1;
  pointer-events: auto;
  position: relative;
  top: 0;
}

:root.left tab-item-substance {
  margin-left: calc(var(--tab-margin-left) + var(--tab-indent));
}

:root.right tab-item-substance {
  margin-right: calc(var(--tab-margin-right) + var(--tab-indent));
}

tab-item,
tab-item * {
  vertical-align: middle;
}

tab-item > *,
tab-item > * > * {
  position: relative;
  z-index: var(--tab-base-z-index);
}

tab-item tab-favicon {
  z-index: var(--tab-favicon-z-index);
}

tab-item.hidden {
  pointer-events: none;
  position: fixed;
  visibility: collapse;
}

:root.animation tab-item.animation-ready,
:root.animation tab-item.animation-ready tab-item-substance,
:root.animation .after-tabs button,
:root.animation .after-tabs [role="button"] {
  transition: var(--tab-animation);
}
:root.animation tab-item.animation-ready:not(.expanding),
:root.animation tab-item.animation-ready:not(.expanding) tab-item-substance,
:root.animation tab-item.animation-ready.expanding.moving,
:root.animation tab-item.animation-ready.expanding.moving tab-item-substance {
  transition: var(--tab-animation),
              var(--tab-indent-animation);
}

tab-item.removing,
tab-item:not(.pinned).collapsed,
tab-item.duplicating {
  margin-top: calc(0px - var(--tab-current-size) - var(--tab-margin-bottom));
  pointer-events: none;
  z-index: var(--invisible-z-index);
}
tab-item.removing tab-item-substance,
tab-item:not(.pinned).collapsed tab-item-substance,
tab-item.duplicating tab-item-substance {
  opacity: 0;
}

tab-item:not(.pinned).collapsed.collapsed-completely {
  visibility: collapse;
}

tab-item.duplicating,
tab-item.duplicating tab-item-substance {
  transition: none;
}


:root.left tab-item tab-twisty {
  order: -1;
}
:root.left tab-item tab-closebox {
  order: 10000;
}

:root.right tab-item tab-twisty {
  order: 10000;
}
:root.right tab-item tab-closebox {
  order: -1;
}

tab-item .highlighter,
tab-item .burster,
tab-item.faviconized.unread tab-favicon::before,
tab-item.attention tab-favicon::before,
tab-item .background,
tab-item .extra-items-container.indent,
tab-item .extra-items-container.behind,
tab-item .extra-items-container.front,
.newtab-button .extra-items-container {
  bottom: 0;
  left: 0;
  pointer-events: none;
  position: absolute;
  right: 0;
  top: 0;
}

tab-item .extra-items-container,
.newtab-button .extra-items-container {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
  overflow: hidden;
}

tab-item .extra-items-container.indent {
  width: var(--tab-indent);
  z-index: var(--tab-indent-z-index);
}
/* ... */

